# ForgeCode

./: .gitignore  Cargo.toml  README.md  TEST_RESULTS.md  install.ps1  install.sh  test.txt  test_fib.rs
.claude/: CLAUDE.md  settings.local.json
.forge/: FORGE.md  settings.json
config/: default.toml
crates/: CLAUDE.md
crates/Layer1-foundation/: CLAUDE.md  Cargo.toml
crates/Layer1-foundation/src/: env_detect.rs  lib.rs  strings.rs
crates/Layer1-foundation/src/audit/: logger.rs  mod.rs  types.rs
crates/Layer1-foundation/src/cache/: config.rs  manager.rs  mod.rs
crates/Layer1-foundation/src/cache/context/: compactor.rs  masker.rs  mod.rs  summarizer.rs
crates/Layer1-foundation/src/cache/response/: mcp.rs  mod.rs  tool.rs
crates/Layer1-foundation/src/cache/util/: hash.rs  lru.rs  mod.rs  two_level.rs
crates/Layer1-foundation/src/config/: forge.rs  limits.rs  mod.rs
crates/Layer1-foundation/src/core/: mod.rs  traits.rs  types.rs
crates/Layer1-foundation/src/error/: mod.rs
crates/Layer1-foundation/src/event/: bus.rs  mod.rs  types.rs
crates/Layer1-foundation/src/permission/: CLAUDE.md  mod.rs  oversight.rs  security.rs  service.rs  settings.rs  types.rs
crates/Layer1-foundation/src/registry/: mod.rs  providers.md
crates/Layer1-foundation/src/registry/mcp/: mod.rs  server.rs
crates/Layer1-foundation/src/registry/model/: mod.rs
crates/Layer1-foundation/src/registry/provider/: CLAUDE.md  mod.rs  provider.rs  provider_type.rs
crates/Layer1-foundation/src/registry/shell/: config.rs  mod.rs
crates/Layer1-foundation/src/storage/: CLAUDE.md  db.rs  mod.rs
crates/Layer1-foundation/src/storage/json/: mod.rs  store.rs
crates/Layer1-foundation/src/tokenizer/: dynamic.rs  estimator.rs  factory.rs  mod.rs  traits.rs  types.rs
crates/Layer2-core/: CLAUDE.md  Cargo.toml
crates/Layer2-core/src/: context.rs  lib.rs
crates/Layer2-core/src/config/: loader.rs  mod.rs  types.rs  workflow.rs
crates/Layer2-core/src/forgecmd/: CLAUDE.md  error.rs  shell.rs
crates/Layer2-core/src/git/: checkpoint.rs  commit.rs  mod.rs  ops.rs
crates/Layer2-core/src/hook/: executor.rs  loader.rs  mod.rs  types.rs
crates/Layer2-core/src/lsp/: CLAUDE.md  client.rs  manager.rs  mod.rs  types.rs
crates/Layer2-core/src/mcp/: CLAUDE.md  bridge.rs  client.rs  mod.rs  transport.rs  types.rs
crates/Layer2-core/src/plugin/: CLAUDE.md  discovery.rs  events.rs  installer.rs  manager.rs  manifest.rs  mod.rs  registry.rs  store.rs  traits.rs
crates/Layer2-core/src/provider/: error.rs  message.rs  mod.rs  retry.rs
crates/Layer2-core/src/registry/: dynamic.rs  entry.rs  mod.rs  snapshot.rs  traits.rs
crates/Layer2-core/src/repomap/: analyzer.rs  graph.rs  mod.rs  ranker.rs  types.rs
crates/Layer2-core/src/skill/: installer.rs  loader.rs  manager.rs  marketplace.rs  mod.rs  registry.rs  store.rs  traits.rs
crates/Layer2-core/src/skill/builtin/: commit.rs  explain.rs  mod.rs  review_pr.rs
crates/Layer2-core/src/task/: CLAUDE.md  container.rs  executor.rs  mod.rs  tool.rs  tracker.rs
crates/Layer2-core/src/tool/: CLAUDE.md  context.rs  mod.rs  parallel.rs  registry.rs  security.rs
crates/Layer2-core/src/tool/builtin/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  task.rs  web_fetch.rs  web_search.rs  write.rs
crates/Layer2-provider/: CLAUDE.md  Cargo.toml
crates/Layer2-provider/src/: agent_provider.rs  error.rs  gateway.rs  lib.rs  message.rs  retry.rs  tool_def.rs  trait.rs
crates/Layer2-provider/src/providers/: anthropic.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs
crates/Layer2-task/: CLAUDE.md  Cargo.toml
crates/Layer2-task/src/: cluster.rs  container.rs  lib.rs  log.rs  manager.rs  orchestrator.rs  state.rs  task.rs
crates/Layer2-task/src/executor/: container.rs  local.rs  mod.rs  pty.rs  resource_monitor.rs  sandbox.rs  shell_policy.rs  trait.rs
crates/Layer2-task/src/subagent/: config.rs  context.rs  handoff.rs  manager.rs  mod.rs  types.rs
crates/Layer2-task/tests/: pty_test.rs
crates/Layer2-tool/: CLAUDE.md  Cargo.toml
crates/Layer2-tool/src/: lib.rs  registry.rs  trait.rs
crates/Layer2-tool/src/builtin/: bash.rs  edit.rs  forgecmd_tool.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
crates/Layer2-tool/src/forgecmd/: config.rs  error.rs  filter.rs  mod.rs  permission.rs  tracker.rs
crates/Layer3-agent/: CLAUDE.md  Cargo.toml
crates/Layer3-agent/src/: agent.rs  compressor.rs  context.rs  context_store.rs  feedback.rs  history.rs  hook.rs  lib.rs  memory.rs  optimizer.rs  parallel.rs  planning.rs  progress.rs  provider_bridge.rs  react.rs  recovery.rs  session.rs  smart_context.rs  steering.rs  subskill.rs  todo.rs  tool_router.rs  verification.rs
crates/Layer3-agent/src/bench/: metrics.rs  mod.rs  report.rs  runner.rs  scenario.rs
crates/Layer3-agent/src/runtime/: context.rs  lifecycle.rs  mod.rs  output.rs  traits.rs
crates/Layer3-agent/src/strategy/: execution.rs  memory.rs  mod.rs  planning.rs  reasoning.rs
crates/Layer3-agent/src/variant/: builder.rs  classic.rs  mod.rs  react.rs  reflexion.rs  registry.rs  tree_search.rs
crates/Layer3-task/: Cargo.toml
crates/Layer3-task/src/: lib.rs
crates/Layer3-task/src/executor/: container.rs  local.rs  mod.rs
crates/Layer4-cli/: CLAUDE.md  Cargo.toml
crates/Layer4-cli/src/: auto_config.rs  cli.rs  clipboard.rs  cost.rs  diff.rs  history.rs  hooks.rs  init.rs  main.rs  markdown.rs  project.rs  session.rs  setup.rs  syntax.rs
crates/Layer4-cli/src/tui/: app.rs  event.rs  forge_app.rs  mod.rs  theme.rs
crates/Layer4-cli/src/tui/components/: input.rs  message_list.rs  mod.rs  model_switcher.rs  permission.rs  progress.rs  settings.rs
crates/Layer4-cli/src/tui/pages/: chat.rs  mod.rs
crates/Layer4-cli/src/tui/widgets/: chat_view.rs  code_block.rs  header.rs  input_area.rs  mod.rs  status_bar.rs  welcome.rs
crates/Layer4-cli/tests/: integration_ollama.rs  simulation_30.rs
docs/: AGENT_RESEARCH.md  TODO.md  (+2 more)
examples/test-project/: Cargo.toml
examples/test-project/.forge/: FORGE.md  settings.json
examples/test-project/src/: client.rs  lib.rs  server.rs
(+25 files in other folders)
