[workspace]
resolver = "2"
members = [
    "crates/Layer1-foundation",
    "crates/Layer2-core",
    "crates/Layer2-provider",
    "crates/Layer2-task",
    "crates/Layer3-agent",
    "crates/Layer4-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ForgeCode Contributors"]
license = "MIT"
repository = "https://github.com/forgecode/forgecode"
rust-version = "1.75"

[workspace.dependencies]
# Async Runtime - base package, features specified per-crate
tokio = { version = "1.43" }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Docker
bollard = "0.18"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
glob = "0.3"
grep-regex = "0.1"
ignore = "0.4"
rayon = "1.10"
parking_lot = "0.12"
which = "7.0"
regex = "1.11"
rand = "0.8"

# Syntax Highlighting & Markdown
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
pulldown-cmark = "0.12"

# Clipboard
arboard = "3.4"

# PTY and Shell
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
shlex = "1.3"

# Internal crates
forge-foundation = { path = "crates/Layer1-foundation" }
forge-core = { path = "crates/Layer2-core" }
forge-provider = { path = "crates/Layer2-provider" }
forge-task = { path = "crates/Layer2-task" }
forge-agent = { path = "crates/Layer3-agent" }

[profile.dev]
opt-level = 1          # Faster compile, reasonable performance

[profile.release]
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Remove symbols
opt-level = 3          # Maximum optimization

[profile.release-with-debug]
inherits = "release"
debug = true           # Include debug info for profiling
strip = false
