[package]
name = "forge-foundation"
description = "Foundation layer for ForgeCode - config, permission, storage, events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Database
rusqlite = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }

# HTTP Client (for tokenizer)
reqwest = { workspace = true }
