[package]
name = "forge-agent"
description = "Agent system for ForgeCode - the core agent loop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal - Layer1
forge-foundation = { workspace = true }

# Internal - Layer2 (all core services)
forge-core = { workspace = true }
forge-provider = { workspace = true }
forge-task = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1"
