[package]
name = "forge-task"
description = "Task management and execution system for ForgeCode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
forge-foundation = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Docker
bollard = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
