[package]
name = "forge-cli"
description = "ForgeCode CLI - Terminal-based AI coding assistant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# Internal
forge-foundation = { workspace = true }
forge-provider = { workspace = true }
forge-tool = { workspace = true }
forge-task = { workspace = true }
forge-agent = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
