[package]
name = "forge-cli"
description = "ForgeCode CLI - Terminal-based AI coding assistant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# Internal - Layer1
forge-foundation = { workspace = true }

# Internal - Layer2
forge-core = { workspace = true }
forge-provider = { workspace = true }
forge-task = { workspace = true }

# Internal - Layer3
forge-agent = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
futures = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
textwrap = "0.16"

# HTTP (for setup wizard connection test)
ureq = "2.9"
